fix code & add seeder
